--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,13 @@ flask==2.3.3
 flask-cors==4.0.0
 python-dotenv==1.0.1
 openai>=1.31.0
+numpy==1.26.4
 requests
 fuzzywuzzy
 python-Levenshtein
+sentence-transformers==2.5.1
+torch==2.1.2
+torchaudio==2.1.2
 boto3
 beautifulsoup4
 gunicorn==20.1.0
